--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,6 @@
     margin-right: 40px;
     border: 5px solid black;
     background-color: white;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
     border-radius: 5px;
     height: 575px;
     width: 575px;
@@ -17,4 +15,18 @@
 .hover {
     border: 1px solid black;
     background-color: black;
+}
+
+.header {
+    text-align: center;
+    font-family: Sportsball, sans-serif;
+}
+
+.game {
+    display: flex;
+    justify-content: center;
+}
+
+body {
+    background-color: antiquewhite;
 }
